# pinocchio-rerun

./: CMakeLists.txt  README.md
draft/: notebook_embedding.ipynb  notebook_test.ipynb  solo12.py  solo8.py  talos.py  ur5.py  vbot.py
examples/: notebook.ipynb  notebook_embedding.ipynb  notebook_test.ipynb  play_solo copy.py  play_solo.py  rerun_visualizer_draft.py  rerun_visualizer_test.py  solo12.py
src/: CMakeLists.txt
src/pinocchio_rerun/: __init__.py  rerun_visualizer.py
